add bill 10 times

--- a/src/styles.css
+++ b/src/styles.css
@@ -18,13 +18,13 @@ h4 {
     color: deeppink;
 }
 
-img {
-    display: block;
-    border: medium dashed rgb(167, 18, 117);
-    padding: 10px;
-    width: 450px;
-    height: 450px;
-    box-sizing: border-box;
-    margin: 275px 0px;
+.bilder {
 
+}
+
+.bilder img {
+    display: block;
+    width: 300px;
+    height: 300px;
+    box-sizing: border-box;
 }
