--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,7 @@
     height: 1500px;
     flex-direction: column;
     align-items: flex-end;
-    align-content: space-evenly;
+    align-content: space-between;
 
 
 }
