--- a/src/styles.css
+++ b/src/styles.css
@@ -3,8 +3,8 @@
     height: 1500px;
     flex-direction: column;
     align-items: flex-end;
-    align-content: space-between;
-
+    justify-content: space-between;
+    
 
 }
 
@@ -14,4 +14,5 @@
     width: 300px;
     height: 300px;
     box-sizing: border-box;
+    border: 10px crimson;
 }
