--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     align-items: flex-end;
     justify-content: space-between;
-    border: 10px crimson;
+    border: 10px red;
 
 }
 
